force-app/main/default/objects/Critical_Work_Performed__c/Critical_Work_Performed__c.object-meta.xml
<CustomObject>
    <label>Critical Work Performed</label>
    <nameField>
        <label>Critical Work Performed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Critical Works Performed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>