force-app/main/default/objects/Critical_Work_Performed__c/fields/Branching_Logic__c.field-meta.xml
<CustomField>
    <fullName>Branching_Logic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branching Logic</label>
    <referenceTo>Branching_Logic__c</referenceTo>
    <relationshipLabel>Critical Works Performed</relationshipLabel>
    <relationshipName>Critical_Works_Performed_BL</relationshipName>
    <type>Lookup</type>
</CustomField>