force-app/main/default/objects/Critical_Work_Performed__c/fields/Controls__c.field-meta.xml
<CustomField>
    <fullName>Controls__c</fullName>
    <description>List of Controls associated to the potential hazards(This field was created for NPL MA).</description>
    <label>Controls</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>