force-app/main/default/objects/Critical_Work_Performed__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Critical Works Performed</relationshipLabel>
    <relationshipName>Critical_Works_Performed_Form</relationshipName>
    <type>Lookup</type>
</CustomField>