force-app/main/default/objects/Critical_Work_Performed__c/fields/Hazard_Source__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Source__c</fullName>
    <formula>Branching_Logic__r.Hazard_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hazard Source</label>
    <type>Text</type>
</CustomField>