force-app/main/default/objects/Critical_Work_Performed__c/fields/Mitigation_Control_del__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Control_del__c</fullName>
    <formula>Branching_Logic__r.Controls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mitigation Control</label>
    <type>Text</type>
</CustomField>