force-app/main/default/objects/Critical_Work_Performed__c/fields/NPL_JHA_for_SDOCS__c.field-meta.xml
<CustomField>
    <fullName>NPL_JHA_for_SDOCS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPL JHA for SDOCS</label>
    <referenceTo>NPL_JHA_for_SDOCS__c</referenceTo>
    <relationshipLabel>Critical Works Performed</relationshipLabel>
    <relationshipName>Critical_Works_Performed</relationshipName>
    <type>Lookup</type>
</CustomField>