force-app/main/default/objects/Critical_Work_Performed__c/fields/NPL_JHA_For_SDocs_ID__c.field-meta.xml
<CustomField>
    <fullName>NPL_JHA_For_SDocs_ID__c</fullName>
    <description>24401</description>
    <formula>Form__r.NPL_JHA_for_SDOCS__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPL JHA For SDocs ID</label>
    <type>Text</type>
</CustomField>