force-app/main/default/objects/Critical_Work_Performed__c/fields/Potential_Hazard__c.field-meta.xml
<CustomField>
    <fullName>Potential_Hazard__c</fullName>
    <description>List of potential hazards associated to the critical step(This field was created for NPL MA).</description>
    <label>Potential Hazard</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>