force-app/main/default/objects/Critical_Work_Performed__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Critical Work Performed</relationshipLabel>
    <relationshipName>Critical_Works_Performed_WO</relationshipName>
    <type>Lookup</type>
</CustomField>